🐛 fix FoodTab border overlapping into next day

--- a/rogue-thi-app/styles/Mensa.module.css
+++ b/rogue-thi-app/styles/Mensa.module.css
@@ -128,3 +128,7 @@
 .icon {
   margin-right: 6px;
 }
+
+.container {
+  width: calc(100% - 1px);
+}
